# codex-chat

./: .gitignore  AGENTS.md  codex.json  test_writer_state.json
.codex/: config.toml  product_mgr_sprint01_loop.py
.codex/agents/: arch_perf_dev.toml  documentor.toml  feature_dev.toml  product_mgr.toml  test_writer.toml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/src/app/login/: LoginActivity.kt  RealtimeRoomGateway.kt
autoTest/: .gitignore  README.md  main.py  pyproject.toml  selfcheck.py
autoTest/configs/: req004_real_device.toml
autoTest/src/autotest/: __init__.py  adb.py  capture.py  cli.py  config.py  models.py  report.py  req004_flow.py  selfcheck.py  service_probe.py  ui_dump.py
autoTest/tests/: test_adb.py  test_capture.py  test_config.py  test_req004_flow.py  test_service_probe.py
docs/00-ENTRANCE/: DEMAND_ENTRANCE.md  DOC_STRUCTURE.md
docs/01-PRODUCT/: COMPETITIVE_ANALYSIS.md  PRD.md
docs/02-ARCHITECTURE/: API_SPEC.md  ARCHITECTURE.md
docs/04-TESTING/: REQ-004_真机全流程测试用例.md  TEST_STRATEGY.md
docs/05-DEBUG/: CHANGELOG.md  DEBUG_NOTES.md
scripts/: documentor_listener.py
service/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
service/backend/routes/: auth.ts  req002.ts  req003.ts
service/src/: index.ts
service/test/: auth.test.ts  req002.socket.test.ts  req002.test.ts  req003.socket.test.ts  req003.test.ts
service/tools/: req003_load.js
(+4 files in other folders)
